# tala

./: .dockerignore  .gitignore  Cargo.toml  README.md  vision.md
.github/workflows/: docs.yml
crates/tala-cli/: Cargo.toml
crates/tala-cli/src/: lib.rs
crates/tala-core/: Cargo.toml
crates/tala-core/src/: lib.rs
crates/tala-daemon/: Cargo.toml
crates/tala-daemon/src/: lib.rs
crates/tala-embed/: Cargo.toml
crates/tala-embed/benches/: embed_bench.rs
crates/tala-embed/src/: lib.rs
crates/tala-graph/: Cargo.toml
crates/tala-graph/benches/: graph_bench.rs
crates/tala-graph/src/: lib.rs
crates/tala-intent/: Cargo.toml
crates/tala-intent/src/: lib.rs
crates/tala-kai/: Cargo.toml
crates/tala-kai/src/: lib.rs
crates/tala-net/: Cargo.toml
crates/tala-net/src/: lib.rs
crates/tala-net/tests/: simulation.rs
crates/tala-sim/: Cargo.toml
crates/tala-sim/src/: chaos.rs  main.rs  metrics.rs  workload.rs
crates/tala-sim/src/verticals/: deploy.rs  incident.rs  mod.rs  observe.rs  provision.rs
crates/tala-store/: Cargo.toml
crates/tala-store/benches/: store_bench.rs
crates/tala-store/src/: lib.rs
crates/tala-weave/: Cargo.toml
crates/tala-weave/src/: lib.rs
crates/tala-wire/: Cargo.toml
crates/tala-wire/benches/: wire_bench.rs
crates/tala-wire/src/: lib.rs
deploy/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
deploy/dashboard/: index.html  nginx.conf  style.css
deploy/grafana/dashboards/: tala-overview.json
deploy/grafana/provisioning/dashboards/: dashboard.yml
deploy/prometheus/: prometheus.yml
media/: mantra.txt
