[package]
name = "tala-store"
version.workspace = true
edition.workspace = true

[dependencies]
tala-core = { path = "../tala-core" }
tala-wire = { path = "../tala-wire" }
tala-embed = { path = "../tala-embed" }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "store_bench"
harness = false
